refactor(Engine): improve cache and state management on computed data provider
 - Prevent bad synchronisation or thread-safety from subclasses by making cache private
 - Detect when provider has been disposed and should not be used anymore.